added about section and responsive

--- a/index.html
+++ b/index.html
@@ -45,6 +45,35 @@
             </div>
         </div>
     </header>
+
+    <section id="about" class="main-container">
+        <div class="about-content">
+            <h2 class="title">About The Podcast</h2>
+            <p id="about-description" class="description">TechWave is your go-to podcast for staying ahead in the
+                fast-paced world of technology.We break down complex topics into digestible insights, explore
+                productivity strategies that actually work,and share stories of personal growth from industry
+                leaders.<br><br>Join thousands of young professionals and tech enthusiasts who start their day with
+                TechWave.</p>
+        </div>
+        <div class="about-box">
+            <div class="about-card">
+                <h1>150K+</h1>
+                <p class="description">MONTHLY LISTENERS</p>
+            </div>
+            <div class="about-card">
+                <h1>200+</h1>
+                <p class="description">EPISODES PUBLISHED</p>
+            </div>
+            <div class="about-card">
+                <h1>4.9★</h1>
+                <p class="description">AVERAGE RATING</p>
+            </div>
+            <div class="about-card">
+                <h1>50+</h1>
+                <p class="description">INDUSTRY EXPERTS</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
