added featured and others responsive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             </div>
         </div>
     </header>
-
     <section id="about" class="main-container">
         <div class="about-content">
             <h2 class="title">About The Podcast</h2>
@@ -74,6 +73,87 @@
             </div>
         </div>
     </section>
+<section id="why-choose" class="main-container">
+        <h2 class="title">Why Choose TechWave</h2>
+        <div class="why-choose-box">
+            <div id="card-01" class="why-choose-card">
+                <img src="./B13-A02-TechWave/assets/headphone.png" alt="headphone icon">
+                <h3 class="why-choose-card-title">Premium Audio Quality</h3>
+                <p class="description">Experience crystal-clear sound with professional-grade recording equipment and
+                    expert audio engineering. Every episode is mastered for optimal listening across all devices and
+                    platforms.</p>
+            </div>
+            <div id="card-02" class="why-choose-card">
+                <img src="./B13-A02-TechWave/assets/device.png" alt="device icon">
+                <h3 class="why-choose-card-title">Mobile Friendly</h3>
+                <p class="description">Listen on the go with seamless mobile experience and offline downloads.</p>
+            </div>
+            <div id="card-03" class="why-choose-card">
+                <img src="./B13-A02-TechWave/assets/location.png" alt="global icon">
+                <h3 class="why-choose-card-title">Global Community</h3>
+                <p class="description">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+            </div>
+            <div id="card-04" class="why-choose-card">
+                <img src="./B13-A02-TechWave/assets/fast.png" alt="flash icon">
+                <h3 class="why-choose-card-title">Exclusive Interviews</h3>
+                <p class="description">Get unprecedented access to industry titans, startup founders, and tech
+                    visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into
+                    their journeys, failures, and success strategies.</p>
+            </div>
+            <div id="card-05" class="why-choose-card">
+                <img src="./B13-A02-TechWave/assets/resource.png" alt="book icon">
+                <h3 class="why-choose-card-title">Rich Resources</h3>
+                <p class="description">Access show notes, transcripts, and additional learning materials for every
+                    episode.</p>
+            </div>
+        </div>
+    </section>
+<section id="featured" class="main-container">
+    <h2 class="title">Featured Episodes</h2>
+    <div class="featured-box">
+        <div class="featured-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/iWuEpnTTD3k?si=6rvHpKTgHS9saz0C"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <div class="card-content">
+                <h3 class="featured-card-title">The Future of AI in Everyday Life</h3>
+                <p class="description">Exploring how artificial intelligence is transforming our daily routines and
+                    what to expect in the next decade.</p>
+                <div class="video-duration"><img src="./B13-A02-TechWave/assets/clock.png" alt="duration"><span id="green-time">12 min</span>
+                </div>
+            </div>
+        </div>
+        <div class="featured-card">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/tlQJ6dcKdSU?si=XyCaCnKuXH52kxlq"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <div class="card-content">
+                <h3 class="featured-card-title">Building Better Habits for Remote Work</h3>
+                <p class="description">Practical strategies for staying productive and maintaining work-life balance
+                    in a remote environment.</p>
+                <div class="video-duration"><img src="./B13-A02-TechWave/assets/clock.png" alt="duration"><span id="green-time">30 min</span>
+                </div>
+            </div>
+        </div>
+        <div class="featured-card">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=Ytmm8TrnMsjwV0l5"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card-content">
+                <h3 class="featured-card-title">Career Growth in Tech: A Roadmap</h3>
+                <p class="description">Expert advice on navigating your tech career from junior developer to senior
+                    leadership roles.</p>
+                <div class="video-duration"><img src="./B13-A02-TechWave/assets/clock.png" alt="duration"><span id="green-time">21 min</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
