--- a/index.html
+++ b/index.html
@@ -154,6 +154,29 @@
         </div>
     </div>
 </section>
+
+<section id="host" class="main-container">
+    <h2 class="title">Meet The Host</h2>
+    <div class="host-card">
+        <div class="host-profile">
+            <img src="./B13-A02-TechWave/assets/host.png" alt="Alex Kummar's Profile Image">
+        </div>
+        <div class="host-content">
+            <h3 class="host-name">Alex Kumar</h3>
+            <p id="host-description" class="description">Tech entrepreneur, productivity expert, and lifelong
+                learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500
+                companies. Through TechWave, Alex shares insights from industry leaders and practical advice for
+                anyone looking to grow in tech.</p>
+            <div class="host-social">
+                <div class="social-icon"><img src="./B13-A02-TechWave/assets/linkedin.png" alt="Linkedin Icon">
+                </div>
+                <div class="social-icon"><img src="./B13-A02-TechWave/assets/x.png" alt="Linkedin Icon"></div>
+                <div class="social-icon"><img src="./B13-A02-TechWave/assets/instagram.png" alt="Linkedin Icon">
+                </div>
+                <div class="social-icon"><img src="./B13-A02-TechWave/assets/youtube.png" alt="Linkedin Icon"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
