added footer,responsive and something included necessary

--- a/index.html
+++ b/index.html
@@ -177,6 +177,18 @@
             </div>
         </div>
     </div>
+</section>
+<footer class="main-container">
+    <h2 class="footer-logo">Tech<span class="waver">Wave</span></h2>
+    <ul class="footer-menu">
+        <li><a href="#"><img src="./B13-A02-TechWave/assets/spotify.png" alt="spotify">Spotify</a></li>
+        <li><a href="#"><img src="./B13-A02-TechWave/assets/apple-podcast.png" alt="Apple Podcast">Apple
+                Podcasts</a></li>
+        <li><a href="#"><img src="./B13-A02-TechWave/assets/youtube-podcast.png" alt="Youtube">YouTube</a></li>
+        <li><a href="#"><img src="./B13-A02-TechWave/assets/twitter.png" alt="Twitter">Twitter</a></li>
+    </ul>
+    <small id="copyright" class="description">© 2026 TechWave Podcast. All rights reserved.</small>
+</footer>
 </body>
 
 </html>
